-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 9.0.0-rc1
-
None
-
-
75b43de14a (qt-creator/qt-creator/master)
When projects have spaces in it's file name, docker builds fail with
Running docker://boot2qt-raspberrypi4-64:6.5.0/opt/toolchain/sysroots/aarch64-pokysdk-linux/usr/bin/cmake -S '/Users/samuli.piippo/Qt/Qt Examples/coffee' -B '/Users/samuli.piippo/Qt/Qt Examples/build-coffee-Boot2Qt_6_5_0_Raspberry_Pi_4_64_bit-Debug' -DCMAKE_GENERATOR:STRING=Ninja -DCMAKE_BUILD_TYPE:STRING=Debug -DCMAKE_SYSROOT:PATH=/opt/toolchain/sysroots/cortexa72-poky-linux -DCMAKE_C_COMPILER_TARGET:STRING=aarch64-poky-linux -DCMAKE_CXX_COMPILER_TARGET:STRING=aarch64-poky-linux -DCMAKE_CXX_COMPILER:STRING=/opt/toolchain/sysroots/aarch64-pokysdk-linux/usr/bin/aarch64-poky-linux/aarch64-poky-linux-g++ -DCMAKE_C_COMPILER:STRING=/opt/toolchain/sysroots/aarch64-pokysdk-linux/usr/bin/aarch64-poky-linux/aarch64-poky-linux-gcc -DCMAKE_PREFIX_PATH:STRING=/opt/toolchain/sysroots/cortexa72-poky-linux/usr -DQT_QMAKE_EXECUTABLE:STRING=/opt/toolchain/sysroots/aarch64-pokysdk-linux/usr/bin/qmake -DCMAKE_TOOLCHAIN_FILE:FILEPATH=/opt/toolchain/sysroots/aarch64-pokysdk-linux/usr/lib/cmake/Qt6/qt.toolchain.cmake -DCMAKE_MAKE_PROGRAM:FILEPATH=/opt/toolchain/sysroots/aarch64-pokysdk-linux/usr/bin/ninja -DCMAKE_CXX_FLAGS_INIT:STRING= in docker://boot2qt-raspberrypi4-64:6.5.0/Users/samuli.piippo/Qt/Qt Examples/build-coffee-Boot2Qt_6_5_0_Raspberry_Pi_4_64_bit-Debug.
/bin/sh: 1: cd: can't cd to /Users/samuli.piippo/Qt/Qt
| For Gerrit Dashboard: QTCREATORBUG-28476 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 444501,7 | Docker: Cleanup docker process interface | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |